--- a/scss/componentes/_contacto.scss
+++ b/scss/componentes/_contacto.scss
@@ -6,16 +6,15 @@
     .contact-wrapper {
         box-shadow: 0 0 20px 0 rgba(255, 255, 255, .3);
         margin: 50px;
-        color: white;
+        color: map-get($map: $colores, $key: "texto");
         font-family: 'Quicksand', sans-serif;
 
         .contact-wrapper > * {
             padding: 1em;
-            
         }
 
         .contact-form {
-            background: #222222;
+            background: map-get($map: $colores, $key: "fondo");
 
             h5{
                 text-align: center;
@@ -44,7 +43,7 @@
                     border: none;
                     background: none;
                     outline: 0;
-                    color: #fff;
+                    color: map-get($map: $colores, $key: "texto");
                     border-bottom: 1px solid #d63031;
                 }
 
@@ -75,8 +74,6 @@
 
 @include mediaQuery (tablet){
     main{
-
-    
         .centrar__h1{
             h1{
             font-size: 50px;
@@ -108,7 +105,6 @@
                     }
                 }
             }
-  
         }
     }
 }
