--- a/scss/componentes/_actividades.scss
+++ b/scss/componentes/_actividades.scss
@@ -53,7 +53,8 @@
         }
         
         .zumba{
-            @include clases ( url(../imagenes/zumba.jpg));
+            @include clases (url(../imagenes/zumba.jpg));
+            background-size: 450px
         }
         
         .gimnasio{
